crates/aranya-policy-compiler/tests/data/commands/recall_statement_in_recall.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: unknown error
  |
9 |         recall other()
  |         ^^^^^^^^^^^^^^ `recall` is only valid in command `policy` blocks
